Fixed text-alignment for media query for buttons

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,12 @@ a {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
   }
+
+  @media (max-width: 600px) {
+    .grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
   
   .grid img {
     width: 100%;
@@ -131,7 +137,15 @@ a {
 
 .width-400 {
   width: 400px;
+  max-width: 100%;
   height: 400px;
+}
+
+@media (max-width: 600px) {
+  .width-400 {
+    width: 300px;
+    height: 300px;
+  }
 }
 
 .flex-1 {
@@ -168,8 +182,6 @@ div.align-normal {
     flex-direction: column;
   }
 }
-
-
 
 .flex-vertical {
   flex-direction: column;
@@ -232,12 +244,18 @@ justify-content: center;
   align-items: center;
   justify-content: center;
   display: flex;
-  max-width: 70%
+
 }
 @media (max-width: 600px) {
   .button-small {
     flex-direction: column;
+    width: 100%;
+    text-align: center;
   }
+}
+
+#flex-horizontal-mobile {
+  flex-direction: row;
 }
 
 .button-white {
@@ -299,4 +317,8 @@ input {
     display: flex;
     flex-direction: column;
 }
+}
+
+img {
+  max-width: 100%;
 }
